feat: harden tenancy, delivery, and quality gates